activedirectory: Added deletionProtection
Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>

--- a/examples-generated/activedirectory/v1beta1/domain.yaml
+++ b/examples-generated/activedirectory/v1beta1/domain.yaml
@@ -8,6 +8,7 @@ metadata:
   name: ad-domain
 spec:
   forProvider:
+    deletionProtection: false
     domainName: tfgen.org.com
     locations:
     - us-central1
