--- a/examples/activedirectory/v1beta1/domain.yaml
+++ b/examples/activedirectory/v1beta1/domain.yaml
@@ -13,6 +13,7 @@ metadata:
   name: domain
 spec:
   forProvider:
+    deletionProtection: false
     domainName: "fndomain.org.com"
     locations:
     - us-central1
