apigee: Added activate flag to apigee_nataddresses
Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>

--- a/examples-generated/apigee/v1beta1/envgroupattachment.yaml
+++ b/examples-generated/apigee/v1beta1/envgroupattachment.yaml
@@ -116,6 +116,7 @@ metadata:
 spec:
   forProvider:
     billingAccount: ""
+    deletionPolicy: DELETE
     name: my-project
     orgId: ""
     projectId: my-project
