--- a/examples-generated/apigee/v1beta1/instanceattachment.yaml
+++ b/examples-generated/apigee/v1beta1/instanceattachment.yaml
@@ -115,6 +115,7 @@ metadata:
 spec:
   forProvider:
     billingAccount: ""
+    deletionPolicy: DELETE
     name: my-project
     orgId: ""
     projectId: my-project
