--- a/package/crds/apigee.gcp.upbound.io_nataddresses.yaml
+++ b/package/crds/apigee.gcp.upbound.io_nataddresses.yaml
@@ -73,6 +73,10 @@ spec:
                 type: string
               forProvider:
                 properties:
+                  activate:
+                    description: Flag that specifies whether the reserved NAT address
+                      should be activate.
+                    type: boolean
                   instanceId:
                     description: |-
                       The Apigee instance associated with the Apigee environment,
@@ -165,6 +169,11 @@ spec:
                   required on creation, but we do not desire to update them after creation,
                   for example because of an external controller is managing them, like an
                   autoscaler.
+                properties:
+                  activate:
+                    description: Flag that specifies whether the reserved NAT address
+                      should be activate.
+                    type: boolean
                 type: object
               managementPolicies:
                 default:
@@ -338,6 +347,10 @@ spec:
             properties:
               atProvider:
                 properties:
+                  activate:
+                    description: Flag that specifies whether the reserved NAT address
+                      should be activate.
+                    type: boolean
                   id:
                     description: an identifier for the resource with format {{instance_id}}/natAddresses/{{name}}
                     type: string
