bigtable: Added bigtable_table columnFamily.type
Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>

--- a/examples-generated/bigtable/v1beta1/table.yaml
+++ b/examples-generated/bigtable/v1beta1/table.yaml
@@ -15,6 +15,11 @@ spec:
     columnFamily:
     - family: family-first
     - family: family-second
+      type: intsum
+    - family: family-third
+      type: "        {\n\t\t\t\t\t\"aggregateType\": {\n\t\t\t\t\t\t\"max\": {},\n\t\t\t\t\t\t\"inputType\":
+        {\n\t\t\t\t\t\t\t\"int64Type\": {\n\t\t\t\t\t\t\t\t\"encoding\": {\n\t\t\t\t\t\t\t\t\t\"bigEndianBytes\":
+        {}\n\t\t\t\t\t\t\t\t}\n\t\t\t\t\t\t\t}\n\t\t\t\t\t\t}\n\t\t\t\t\t}\n\t\t\t\t}\n"
     instanceNameSelector:
       matchLabels:
         testing.upbound.io/example-name: instance
