--- a/package/crds/bigtable.gcp.upbound.io_appprofiles.yaml
+++ b/package/crds/bigtable.gcp.upbound.io_appprofiles.yaml
@@ -778,6 +778,8 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  rowAffinity:
+                    type: boolean
                   singleClusterRouting:
                     description: |-
                       Use a single-cluster routing policy.
@@ -852,6 +854,8 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  rowAffinity:
+                    type: boolean
                   singleClusterRouting:
                     description: |-
                       Use a single-cluster routing policy.
@@ -1096,6 +1100,8 @@ spec:
                       The ID of the project in which the resource belongs.
                       If it is not provided, the provider project is used.
                     type: string
+                  rowAffinity:
+                    type: boolean
                   singleClusterRouting:
                     description: |-
                       Use a single-cluster routing policy.
