--- a/examples-generated/bigtable/v1beta2/appprofile.yaml
+++ b/examples-generated/bigtable/v1beta2/appprofile.yaml
@@ -39,4 +39,4 @@ spec:
       numNodes: 3
       storageType: HDD
       zone: us-central1-c
-    deletionProtection: "true"
+    deletionProtection: true
