cloudrun: multiple changes
Signed-off-by: Rickard von Essen <rickard.von.essen@gmail.com>

--- a/examples-generated/cloudrun/v1beta2/v2job.yaml
+++ b/examples-generated/cloudrun/v1beta2/v2job.yaml
@@ -8,6 +8,7 @@ metadata:
   name: default
 spec:
   forProvider:
+    deletionProtection: false
     location: us-central1
     template:
     - template:
