--- a/examples-generated/cloudrun/v1beta2/v2service.yaml
+++ b/examples-generated/cloudrun/v1beta2/v2service.yaml
@@ -8,6 +8,7 @@ metadata:
   name: default
 spec:
   forProvider:
+    deletionProtection: false
     ingress: INGRESS_TRAFFIC_ALL
     location: us-central1
     template:
