--- a/examples/cloudrun/v1beta2/v2service.yaml
+++ b/examples/cloudrun/v1beta2/v2service.yaml
@@ -12,6 +12,7 @@ metadata:
   name: default
 spec:
   forProvider:
+    deletionProtection: false
     binaryAuthorization:
       breakglassJustification: Some justification
       useDefault: true
