--- a/package/crds/cloudrun.gcp.upbound.io_services.yaml
+++ b/package/crds/cloudrun.gcp.upbound.io_services.yaml
@@ -3543,9 +3543,74 @@ spec:
                               Structure is documented below.
                             items:
                               properties:
+                                csi:
+                                  description: |-
+                                    A filesystem specified by the Container Storage Interface (CSI).
+                                    Structure is documented below.
+                                  properties:
+                                    driver:
+                                      description: 'Unique name representing the type
+                                        of file system to be created. Cloud Run supports
+                                        the following values:'
+                                      type: string
+                                    readOnly:
+                                      description: If true, mount the NFS volume as
+                                        read only in all mounts. Defaults to false.
+                                      type: boolean
+                                    volumeAttributes:
+                                      additionalProperties:
+                                        type: string
+                                      description: 'Driver-specific attributes. The
+                                        following options are supported for available
+                                        drivers:'
+                                      type: object
+                                      x-kubernetes-map-type: granular
+                                  type: object
+                                emptyDir:
+                                  description: |-
+                                    Ephemeral storage which can be backed by real disks (HD, SSD), network storage or memory (i.e. tmpfs). For now only in memory (tmpfs) is supported. It is ephemeral in the sense that when the sandbox is taken down, the data is destroyed with it (it does not persist across sandbox runs).
+                                    Structure is documented below.
+                                  properties:
+                                    medium:
+                                      description: The medium on which the data is
+                                        stored. The default is "" which means to use
+                                        the node's default medium. Must be an empty
+                                        string (default) or Memory.
+                                      type: string
+                                    sizeLimit:
+                                      description: 'Limit on the storage usable by
+                                        this EmptyDir volume. The size limit is also
+                                        applicable for memory medium. The maximum
+                                        usage on memory medium EmptyDir would be the
+                                        minimum value between the SizeLimit specified
+                                        here and the sum of memory limits of all containers
+                                        in a pod. This field''s values are of the
+                                        ''Quantity'' k8s type: https://kubernetes.io/docs/reference/kubernetes-api/common-definitions/quantity/.
+                                        The default is nil which means that the limit
+                                        is undefined. More info: https://kubernetes.io/docs/concepts/storage/volumes/#emptydir.'
+                                      type: string
+                                  type: object
                                 name:
                                   description: Volume's name.
                                   type: string
+                                nfs:
+                                  description: |-
+                                    A filesystem backed by a Network File System share. This filesystem requires the
+                                    run.googleapis.com/execution-environment annotation to be unset or set to "gen2"
+                                    Structure is documented below.
+                                  properties:
+                                    path:
+                                      description: Path exported by the NFS server
+                                      type: string
+                                    readOnly:
+                                      description: If true, mount the NFS volume as
+                                        read only in all mounts. Defaults to false.
+                                      type: boolean
+                                    server:
+                                      description: IP address or hostname of the NFS
+                                        server
+                                      type: string
+                                  type: object
                                 secret:
                                   description: |-
                                     The secret's value will be presented as the content of a file whose
@@ -4359,9 +4424,74 @@ spec:
                               Structure is documented below.
                             items:
                               properties:
+                                csi:
+                                  description: |-
+                                    A filesystem specified by the Container Storage Interface (CSI).
+                                    Structure is documented below.
+                                  properties:
+                                    driver:
+                                      description: 'Unique name representing the type
+                                        of file system to be created. Cloud Run supports
+                                        the following values:'
+                                      type: string
+                                    readOnly:
+                                      description: If true, mount the NFS volume as
+                                        read only in all mounts. Defaults to false.
+                                      type: boolean
+                                    volumeAttributes:
+                                      additionalProperties:
+                                        type: string
+                                      description: 'Driver-specific attributes. The
+                                        following options are supported for available
+                                        drivers:'
+                                      type: object
+                                      x-kubernetes-map-type: granular
+                                  type: object
+                                emptyDir:
+                                  description: |-
+                                    Ephemeral storage which can be backed by real disks (HD, SSD), network storage or memory (i.e. tmpfs). For now only in memory (tmpfs) is supported. It is ephemeral in the sense that when the sandbox is taken down, the data is destroyed with it (it does not persist across sandbox runs).
+                                    Structure is documented below.
+                                  properties:
+                                    medium:
+                                      description: The medium on which the data is
+                                        stored. The default is "" which means to use
+                                        the node's default medium. Must be an empty
+                                        string (default) or Memory.
+                                      type: string
+                                    sizeLimit:
+                                      description: 'Limit on the storage usable by
+                                        this EmptyDir volume. The size limit is also
+                                        applicable for memory medium. The maximum
+                                        usage on memory medium EmptyDir would be the
+                                        minimum value between the SizeLimit specified
+                                        here and the sum of memory limits of all containers
+                                        in a pod. This field''s values are of the
+                                        ''Quantity'' k8s type: https://kubernetes.io/docs/reference/kubernetes-api/common-definitions/quantity/.
+                                        The default is nil which means that the limit
+                                        is undefined. More info: https://kubernetes.io/docs/concepts/storage/volumes/#emptydir.'
+                                      type: string
+                                  type: object
                                 name:
                                   description: Volume's name.
                                   type: string
+                                nfs:
+                                  description: |-
+                                    A filesystem backed by a Network File System share. This filesystem requires the
+                                    run.googleapis.com/execution-environment annotation to be unset or set to "gen2"
+                                    Structure is documented below.
+                                  properties:
+                                    path:
+                                      description: Path exported by the NFS server
+                                      type: string
+                                    readOnly:
+                                      description: If true, mount the NFS volume as
+                                        read only in all mounts. Defaults to false.
+                                      type: boolean
+                                    server:
+                                      description: IP address or hostname of the NFS
+                                        server
+                                      type: string
+                                  type: object
                                 secret:
                                   description: |-
                                     The secret's value will be presented as the content of a file whose
@@ -5363,9 +5493,74 @@ spec:
                               Structure is documented below.
                             items:
                               properties:
+                                csi:
+                                  description: |-
+                                    A filesystem specified by the Container Storage Interface (CSI).
+                                    Structure is documented below.
+                                  properties:
+                                    driver:
+                                      description: 'Unique name representing the type
+                                        of file system to be created. Cloud Run supports
+                                        the following values:'
+                                      type: string
+                                    readOnly:
+                                      description: If true, mount the NFS volume as
+                                        read only in all mounts. Defaults to false.
+                                      type: boolean
+                                    volumeAttributes:
+                                      additionalProperties:
+                                        type: string
+                                      description: 'Driver-specific attributes. The
+                                        following options are supported for available
+                                        drivers:'
+                                      type: object
+                                      x-kubernetes-map-type: granular
+                                  type: object
+                                emptyDir:
+                                  description: |-
+                                    Ephemeral storage which can be backed by real disks (HD, SSD), network storage or memory (i.e. tmpfs). For now only in memory (tmpfs) is supported. It is ephemeral in the sense that when the sandbox is taken down, the data is destroyed with it (it does not persist across sandbox runs).
+                                    Structure is documented below.
+                                  properties:
+                                    medium:
+                                      description: The medium on which the data is
+                                        stored. The default is "" which means to use
+                                        the node's default medium. Must be an empty
+                                        string (default) or Memory.
+                                      type: string
+                                    sizeLimit:
+                                      description: 'Limit on the storage usable by
+                                        this EmptyDir volume. The size limit is also
+                                        applicable for memory medium. The maximum
+                                        usage on memory medium EmptyDir would be the
+                                        minimum value between the SizeLimit specified
+                                        here and the sum of memory limits of all containers
+                                        in a pod. This field''s values are of the
+                                        ''Quantity'' k8s type: https://kubernetes.io/docs/reference/kubernetes-api/common-definitions/quantity/.
+                                        The default is nil which means that the limit
+                                        is undefined. More info: https://kubernetes.io/docs/concepts/storage/volumes/#emptydir.'
+                                      type: string
+                                  type: object
                                 name:
                                   description: Volume's name.
                                   type: string
+                                nfs:
+                                  description: |-
+                                    A filesystem backed by a Network File System share. This filesystem requires the
+                                    run.googleapis.com/execution-environment annotation to be unset or set to "gen2"
+                                    Structure is documented below.
+                                  properties:
+                                    path:
+                                      description: Path exported by the NFS server
+                                      type: string
+                                    readOnly:
+                                      description: If true, mount the NFS volume as
+                                        read only in all mounts. Defaults to false.
+                                      type: boolean
+                                    server:
+                                      description: IP address or hostname of the NFS
+                                        server
+                                      type: string
+                                  type: object
                                 secret:
                                   description: |-
                                     The secret's value will be presented as the content of a file whose
